# kalix

./: .gitignore  LICENSE  MODULE.bazel
.github/workflows/: build_test.yml
kalix/base/: BUILD.bazel  compensated_double.h  compensated_double_test.cpp  config.h  constants.h  sparse_vector_sum.h  sparse_vector_sum_test.cpp  system_info.cpp  system_info.h  system_info_test.cpp  vector.h  vector_test.cpp
