# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "config",
    hdrs = [
        "config.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "system_info",
    srcs = [
        "system_info.cpp",
    ],
    hdrs = [
        "system_info.h",
    ],
    deps = [],
)

cc_library(
    name = "constants",
    hdrs = [
        "constants.h",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "system_info_test",
    srcs = ["system_info_test.cpp"],
    deps = [
        ":system_info",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "compensated_double",
    hdrs = [
        "compensated_double.h",
    ],
    deps = [
        ":config",
    ],
)

cc_test(
    name = "compensated_double_test",
    srcs = ["compensated_double_test.cpp"],
    deps = [
        ":compensated_double",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "vector",
    hdrs = [
        "vector.h",
    ],
    deps = [
        ":config",
        ":constants",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "vector_test",
    srcs = ["vector_test.cpp"],
    deps = [
        ":compensated_double",
        ":vector",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sparse_vector_sum",
    hdrs = [
        "sparse_vector_sum.h",
    ],
    deps = [
        ":compensated_double",
        ":config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "sparse_vector_sum_test",
    srcs = ["sparse_vector_sum_test.cpp"],
    deps = [
        ":sparse_vector_sum",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
